backend get all styles
