# resources/swagger/georchestra-signalement.json
@@ -195,6 +195,63 @@
 				}
 			}
 		},
+		"/styles": {
+			"get": {
+				"tags": [
+					"stylesContainer"
+				],
+				"summary": "Recherche de la liste des style.",
+				"description": "Récupération de la liste des styles disponibles qui respectent les filtres.",
+				"operationId": "searchStyle",
+				"produces": [
+					"application/json"
+				],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "offset",
+						"description": "Index de début",
+						"required": false,
+						"type": "integer",
+						"default": 0
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"description": "Nombre de résultats à retourner",
+						"required": false,
+						"type": "integer",
+						"default": 10
+					},
+					{
+						"in": "query",
+						"name": "sortExpression",
+						"description": "Indications de tri",
+						"required": false,
+						"type": "string",
+						"default": ""
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK",
+						"schema": {
+							"type": "object",
+							"$ref": "#/definitions/StylePageResult"
+						}
+					},
+					"400": {
+						"description": "Bad input parameter"
+					},
+					"500": {
+						"description": "Internal server error",
+						"schema": {
+							"$ref": "#/definitions/ApiError"
+						}
+					}
+				}
+			}
+		},
 		"/user/me": {
 			"get": {
 				"tags": [
@@ -2606,6 +2663,54 @@
 				},
 				"filtering": {
 					"type": "boolean"
+				}
+			}
+		},
+		"StyleTMP": {
+			"type": "object",
+			"description": "GeoJSon feature style",
+			"properties": {
+				"definition": {
+					"type": "string"
+				},
+				"name": {
+					"type": "string"
+				}
+			}
+		},
+		"StyleContainer": {
+			"type": "object",
+			"description": "GeoJSon feature style",
+			"properties": {
+				"id": {
+					"type": "integer",
+					"format": "int64"
+				},
+				"type": {
+					"type": "string"
+				},
+				"style": {
+					"type": "object",
+					"$ref": "#/definitions/Style"
+				},
+				"name": {
+					"type": "string"
+				}
+			}
+		},
+		"StylePageResult": {
+			"type": "object",
+			"properties": {
+				"totalItems": {
+					"type": "integer",
+					"format": "int64"
+				},
+				"results": {
+					"type": "array",
+					"items": {
+						"type": "object",
+						"$ref": "#/definitions/StyleContainer"
+					}
 				}
 			}
 		},
